fix wrap on h1

--- a/src/index.scss
+++ b/src/index.scss
@@ -14,7 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 
-@import "color-scheme";
+@import 'color-scheme';
 
 // CSS reset
 
@@ -47,6 +47,7 @@ h1 {
     font-size: 24px;
     line-height: 32px;
     text-align: center;
+    word-break: break-all;
 }
 
 a {
